# City-Traffic-Monitoring

./: .gitignore
Python/AmqpClient/: .gitignore  README.md  pyproject.toml  requirements-dev.txt  setup.cfg  tox.ini
Python/AmqpClient/src/broker/amqp/: AmqpClient.py  __init__.py
Python/AmqpClient/tests/: test_version.py
Python/BrokerConsumer/: README.md  pyproject.toml  requirements.txt
Python/BrokerConsumer/src/broker/consumer/: __init__.py
Python/BrokerConsumer/tests/: test_version.py
Python/BrokerServiceInterface/: README.md  pyproject.toml
Python/BrokerServiceInterface/src/broker/service_interface/: ServiceInterface.py  __init__.py  utility.py
Python/BrokerServiceInterface/tests/: test_to_async.py  test_version.py
Python/NatsClient/: README.md  pyproject.toml  requirements.txt  tox.ini
Python/NatsClient/tests/: test_version.py
docker-compose/emqx/: docker-compose.yml
docker-compose/nats/: docker-compose.yml
docker-compose/nats/config/: nats-server.conf
docker-compose/rabbitmq/: docker-compose.yml
docker-compose/rabbitmq/config/: login.env
k8s/: .gitignore  README.md  RaspberryPi.md
k8s/dev/rabbitmq/: kustomization.yaml
k8s/manifest/base/dev/: kustomization.yaml  namespace-dev.yaml
k8s/manifest/overlays/dev/: README.md  kustomization.yaml
pipeline/: .gitignore  setup.py
pipeline/etl/: repository.py
pipeline/etl/data/: extract_audio_execution.yaml
pipeline/etl/jobs/: extract_audio.py
pipeline/etl/ops/: a_weigthing.py  angle_of_arrival.py  extract_senml.py  scales_to_frequencies.py
pipeline/etl/ops/a_weighting_helper/: A_weighting.py  _filter_design.py
pipeline/etl/sensor/: listen_broker.py
pipeline/etl_tests/: test_a_weighting.py  test_angle_of_arrival.py
sensor/sensor-rust/: Cargo.toml  config.toml
sensor/sensor-rust/src/: audio.rs  main.rs  publishing.rs  utility.rs
visualization/time_series/: dash_main.py  main.py  requirements.txt
visualization/time_series/src/: utils.py
(+6 files in other folders)
