[package]
name = "sensor-mqtt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paho-mqtt = "*"
log = "*"
soundio = {version="*", git = "https://github.com/Amanita-muscaria/soundio-rs", features = ["pulse_support"]}
cbor = "*"
chrono = "*"
crossbeam = "*"
serde = "*"
serde_derive = "*"
serde_cbor = "*"
erased-serde = "*"
serde_json = "*"
base64 = "*"
flate2 = "*"
ndarray = { version = "*",  features = ["serde"]}